# Kanzi-Demos

./: .gitignore  3D渲染技巧.md  3D渲染相关知识点.md  3D渲染相关知识点_.md  readme.md  性能优化.xls
Activity Transitions/Application/: CMakeLists.txt
Activity Transitions/Application/src/: activity_transitions.cpp
Activity Transitions/Tool_project/: Activity transitions.kzproj
Activity/Application/: CMakeLists.txt
Android Data Source/Application/: CMakeLists.txt
AndroidGettingStarted/Application/: CMakeLists.txt
Bloom/MeshData/: CarBadge  CarBody  Car_Bottom  Car_Bumper  Car_Grill  Car_HeadlightsGlass  Car_Interior  Car_Taillights  Car_Wheels  Car_Windows  Shadowplane
Bloom/Shaders/: CarPhongCube.frag.glsl  CarPhongCube.vert.glsl  CarPhongTextured.vert.glsl  CarPhongTexturedCube.frag.glsl  CarPhongTexturedCube.vert.glsl  Combine.frag.glsl  GaussianBloom07.frag.glsl  GaussianBloom09.frag.glsl
Components/Application/: CMakeLists.txt
Data Source/Application/: CMakeLists.txt  generate_cmake_vs2019_solution.bat
Data Source/Application/src/plugin/: CMakeLists.txt
Data Source/Application/src/plugin/src/: data_object_static_list.cpp  data_object_static_list.hpp  resource.h  xmldatasource.aps  xmldatasource.cpp  xmldatasource.hpp  xmldatasource.rc  xmldatasource_module.cpp  xmldatasource_module.hpp
Data Source/Tool_project/: XML data source.kzproj  XML data source.kzproj_1  XML data source.kzproj_5
Data trigger/Start/Application/: CMakeLists.txt
Data trigger/Start/Application/src/: data_trigger.cpp
Data-Driven Activity/Application/: CMakeLists.txt
Drag and Drop/Application/: CMakeLists.txt
Drag and Drop/Application/src/: drag_and_drop.cpp
Drag and Drop/Tool_project/: Drag and drop.kzproj
Dynamic Layout/: Dynamic layout.kzproj
Dynamic Layout/Application Player/: application.cfg  binaries.cfg
First Application/Application Player/: application.cfg  binaries.cfg  first_application.kzb.txt
First Application/MeshData/: CarBadge  CarBody  Car_Bottom  Car_Bumper  Car_Grill  Car_HeadlightsGlass  Car_Interior  Car_Taillights  Car_Wheels  Car_Windows
Gauges/: Gauges.kzproj
Gaussion Blur/MeshData/: Car_Interior  Car_Windows
Gaussion Blur/Shaders/: Car Paint.frag.glsl  CarPhongTextured.vert.glsl  CarPhongTexturedCube.vert.glsl  RoundBoxBrush.vert.glsl
Getting started/Application/: CMakeLists.txt
Getting started/Application/src/: getting_started.cpp
HelloWorld/Application/: CMakeLists.txt
HelloWorld/Application/src/: helloworld.cpp
Indicator/: Indicator.kzproj
Indicator/Shaders/: TileAtlas.frag.glsl  TileAtlas.vert.glsl
Input-UI Navigation/Application/: CMakeLists.txt
Input-UI Navigation/Application/src/: ui_navigation.cpp
Input-UI Navigation/Tool_project/: UI navigation.kzproj_1
Interpolate Animations/Application/: CMakeLists.txt
Interpolate Animations/Tool_project/: Interpolate.kzproj
Keyframe Animations/: Keyframe animations.kzproj
Keyframe Animations/Animations/: Node3D.RenderTransformation - SCALE_Y  Node3D.RenderTransformation - TRANSLATION_Y
Keyframe Animations/MeshData/: BeachBall
Localization/Application/: CMakeLists.txt
Localization/Tool_project/: Localization.kzproj
Material and Textures Backup/Application/: CMakeLists.txt
Multi-Project/Application/: CMakeLists.txt
Multi-Project/Application/src/: center_stack.cpp
Multi-Project/Music/: Music.kzproj.autosave  Music.kzproj_1
Multi-Project/Resources/: Resources.kzproj
Multi-Project/Stats/: Stats.kzproj  Stats.kzproj_1
Multi-Project/Tool_project/: Center stack.kzproj
Multi-Project/Weather/: Weather.kzproj
Pan Zoom Tap/Application/: CMakeLists.txt
Pan Zoom Tap/Application/build_vs2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Pan_zoom_tap_start.sln  Pan_zoom_tap_start.vcxproj  Pan_zoom_tap_start.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Pan Zoom Tap/Application/src/: pan_zoom_tap.cpp
Pan Zoom Tap/Tool_project/: Pan zoom tap.kzproj  Pan zoom tap.kzproj.autosave
Program Activities/Application/: CMakeLists.txt  generate_cmake_vs2019_solution.bat
Program Activities/Tool_project/: Program Activities.kzproj
Progressive Rendering/3D Assets/: Gauges.fbx
Progressive Rendering/Animations/: RPMAnimation  Rotate Y 0 to 360  SpeedAnimation
Progressive Rendering/Images/: 360Car_Tire.tga  studio_cross_NEGX.tga  studio_cross_NEGY.tga  studio_cross_NEGZ.tga  studio_cross_POSX.tga  studio_cross_POSY.tga  studio_cross_POSZ.tga  studio_irradiance_negx.tga  studio_irradiance_negy.tga  studio_irradiance_negz.tga  studio_irradiance_posx.tga  studio_irradiance_posy.tga  studio_irradiance_posz.tga
Progressive Rendering/MeshData/: RPMNeedlePlane  RPMTable  SpeedNeedlePlane  SpeedTable  Vehicle_Emblems  Vehicle_FrontSeats  Vehicle_GlassRoof  Vehicle_Interior  Vehicle_LeftFrontBrakeDisc  Vehicle_LeftFrontDoor  Vehicle_LeftFrontGlass  Vehicle_LeftFrontTyre  Vehicle_LeftRearDoor  Vehicle_LeftRearGlass  Vehicle_LeftRearTyre  Vehicle_LicencePlate  Vehicle_LightCovers  Vehicle_MainBody  Vehicle_RightFrontBrakeDisc  Vehicle_RightFrontDoor  Vehicle_RightFrontGlass  Vehicle_RightFrontTyre  Vehicle_RightRearDoor  Vehicle_RightRearGlass  Vehicle_RightRearTyre  Vehicle_SteeringWheel  Vehicle_Undercarriage
Progressive Rendering/Shaders/: Phong.vert.glsl  PhongCube.frag.glsl  PhongCube.vert.glsl  Phong_Metalness_Vertex.frag.glsl  Phong_Metalness_Vertex.vert.glsl
Reflections/: Reflections.kzproj
Reflections/Images/: cube_filteredDiffuse.dds
Reflections/MeshData/: Brake0  Brake1  Brake2  Brake3  Brake4  Clutch0  Clutch1  Clutch2  Clutch3  Clutch4  Disc0  Disc1  Disc2  Disc3  Disc4  Tire0_0  Tire0_1  Tire0_2  Tire1_0  Tire1_1  Tire1_2  Tire2_0  Tire2_1  Tire2_2  Tire3_0  Tire3_1  Tire3_2  Tire4_0  Tire4_1  Tire4_2  Wheel0  Wheel1  Wheel2  Wheel3  Wheel4
Rotate a 3D model/Application/: CMakeLists.txt
Stencil/Application/: CMakeLists.txt
Stencil/Application/src/: stencil.cpp
Theming/Application/: CMakeLists.txt
Theming/Application/src/: theming.cpp
(+593 files in other folders)
